kubernetes-deploy/00-core/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pki
  labels:
    environment: production
    tier: security
    name: pki
---
apiVersion: v1
kind: Namespace
metadata:
  name: iam
  labels:
    environment: production
    tier: identity
    name: iam
---
apiVersion: v1
kind: Namespace
metadata:
  name: ood
  labels:
    environment: production
    tier: frontend
    name: ood
